force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Event_Date__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Event_Date__c</fullName>
    <description>The date and time this event occurred in the version control system.</description>
    <label>Event Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>