force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Event_Id__c</fullName>
    <description>The unique ID of this event in the remote VCS</description>
    <externalId>true</externalId>
    <label>Event Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>