force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Handled__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this VCS Event been handled by the DevOps Center?</description>
    <inlineHelpText>Managed by the DevOps Center, when this VCS Event has been handled/resolved, this value will be updated to true automatically.</inlineHelpText>
    <label>Handled</label>
    <type>Checkbox</type>
</CustomField>