force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operation_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The AOR referencing the current ongoing operation of this VCS Event, if one exists.</description>
    <label>Operation Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>VCS Events</relationshipLabel>
    <relationshipName>VCS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>