force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Repository__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Repository__c</fullName>
    <description>The VCS repository that was the source of this VCS Event.</description>
    <label>Repository</label>
    <referenceTo>sf_devops__Repository__c</referenceTo>
    <relationshipLabel>Vcs Events</relationshipLabel>
    <relationshipName>Vcs_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>