force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Source_Branch__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Source_Branch__c</fullName>
    <description>For events that reference 2 branches, this is the source branch of the operation.  As an example, an event about a change request.</description>
    <label>Source Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>