force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Target_Branch__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Target_Branch__c</fullName>
    <description>The name of the branch that this event is targeting</description>
    <label>Target Branch</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>