force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/fields/sf_devops__Target_Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Target_Pipeline_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Pipeline Stage record that this VCS Event applies to.</description>
    <label>Target Pipeline Stage</label>
    <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
    <relationshipLabel>VCS Events</relationshipLabel>
    <relationshipName>VCS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>