force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Vcs_Event__c/validationRules/sf_devops__Disable_Handled.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Disable_Handled</fullName>
    <active>true</active>
    <description>A VCS Event cannot have its Handled__c field disabled once set.</description>
    <errorConditionFormula>AND(PRIORVALUE(sf_devops__Handled__c), ISCHANGED(sf_devops__Handled__c))</errorConditionFormula>
    <errorMessage>A VCS Event cannot have its Handled__c field disabled once set.</errorMessage>
</ValidationRule>